<resources>
    <string name="app_name">veri çekme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bak_al">Bakk-Al</string>
    <string name="sifre">Şifre</string>
    <string name="eposta">EPosta</string>
    <string name="yeni_kullanici_kaydi">Yeni Kullanıcı Kaydı</string>
    <string name="giris">Giriş</string>
    <string name="title_activity_kullanici_kayit">KullaniciKayit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_kayit_kullanici">KayitKullanici</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">210032107298374</string>
    <string name="fb_login_protocol_scheme">fb210032107298374</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

</resources>