<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KullaniciSayfasi"
    android:background="@color/arka_plan">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bak_al"
        android:textSize="38sp"
        android:textStyle="bold"
        android:layout_marginVertical="10sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/baslık"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:id="@+id/kayıtOl"
        android:layout_marginVertical="430dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:background="@color/arka_plan"
        android:text="@string/yeni_kullanici_kaydi"
        android:textColor="@color/white"
        android:textSize="11dp"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="200dp"
        android:textColor="@color/altbasliklar"/>

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="260dp"
        android:textColor="@color/altbasliklar"/>

    <TextView
        android:id="@+id/epostaisim"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/eposta"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="180dp"
        android:textColor="@color/altbasliklar"/>

    <TextView
        android:id="@+id/parolaisim"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/sifre"
        android:textStyle="bold"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginVertical="240dp"
        android:textColor="@color/altbasliklar" />

    <Button
        android:id="@+id/Giris"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/giris"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginVertical="370dp"
        android:textStyle="bold"
        android:background="@color/button_rengi"
        />

    <Button
        android:id="@+id/sifremiUnuttum"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:text="Şifremi Unuttum"
        android:textSize="11dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginVertical="320dp"
        android:background="@color/açık_mavi"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googlebutton"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_marginStart="90dp"
        android:layout_marginVertical="480dp"
        android:layout_marginLeft="90dp"
        android:visibility="gone"/>

</RelativeLayout>